--- a/theme001/Styles/slide-show.css
+++ b/theme001/Styles/slide-show.css
@@ -9,39 +9,17 @@
     margin-bottom: 20px !important;
 }
 
-.slide-show h2 {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 48px;
-    font-weight: 300;
-    text-shadow: 0 0 .5em rgba(0,0,0,1);
-}
 
-.slide-show .btn {
-    font-size: 16px;
-}
+
+.slide-show .btn {}
 
 .slide-show li.slide {
     position: relative;
 }
 
-.slide-show .slide-text {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 22px;
-    font-weight: 300;
-    text-shadow: 0 0 .5em rgba(0,0,0,1);
-}
 
 .flex-control-nav {
     bottom: 20px !important;
-}
-
-.slide-show .slide-overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    top: 35%;
-    text-align: center;
 }
 
 .flex-direction-nav .flex-next {
@@ -54,9 +32,26 @@
 }
 
 
+
 /*************** custom styles ***************/
 .slider_container {width: auto !important;margin: 0 auto;padding: 0 !important;}
 .slide-show {margin: 0 !important;}
+
+
+
+.slide-show .slide-overlay {width: 100%;margin: -81px 0 0 0;text-align: center;position: absolute;top: 50%;}
+
+.slide-show h2.slide-heading {margin: 0;padding: 0;font-size: 50px;text-transform: uppercase;
+text-shadow: 2px 2px 1px rgba(0, 0, 0, .5);
+}
+
+.slide-show p.slide-text {margin: 0;padding: 10px 0 0 0;font-size: 16px;text-transform: uppercase;
+text-shadow: 2px 2px 1px rgba(0, 0, 0, .5);
+}
+
+.slide-button {margin: 0;padding: 20px 0 0 0;}
+.slide-button .btn {}
+
 
 
 @media screen and (max-width: 767px) {
